{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 214,
  "lineage": "2ff8b6db-c060-26ce-2915-9caf7ce59b42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "php-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03657b56516ab7912",
            "arn": "arn:aws:ec2:us-east-2:681868270430:instance/i-04bf9304c6c371eaf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bf9304c6c371eaf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-local-pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9f9407d114ed586",
            "private_dns": "ip-172-40-0-39.us-east-2.compute.internal",
            "private_ip": "172.40.0.39",
            "public_ip": "13.59.238.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0082967624793a220",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04203a343bf902b22",
            "tags": {
              "Name": "PHP"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b3a9810d80cbe089"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-php",
            "aws_subnet.subnet-php1",
            "aws_vpc.vpc-php"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:681868270430:internet-gateway/igw-04870727e52930923",
            "id": "igw-04870727e52930923",
            "owner_id": "681868270430",
            "tags": {
              "Name": "gw-php"
            },
            "vpc_id": "vpc-0730c24a0d443d56f"
          },
          "dependencies": [
            "aws_vpc.vpc-php"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9d92c1d200c8d58",
            "original_route_table_id": "rtb-0ff68b7609f36b0f7",
            "route_table_id": "rtb-0fe35314d9fe9734d",
            "vpc_id": "vpc-0730c24a0d443d56f"
          },
          "dependencies": [
            "aws_internet_gateway.gw-php",
            "aws_route_table.route-php",
            "aws_vpc.vpc-php"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe35314d9fe9734d",
            "owner_id": "681868270430",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04870727e52930923",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0730c24a0d443d56f"
          },
          "dependencies": [
            "aws_internet_gateway.gw-php",
            "aws_vpc.vpc-php"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-dbphp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:681868270430:security-group/sg-01fcd1c7c28ceb2ca",
            "description": "acesso-dbphp",
            "egress": [],
            "id": "sg-01fcd1c7c28ceb2ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.40.0.0/24"
                ],
                "description": "acesso-dbphp",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "acesso-dbphp",
            "name_prefix": "",
            "owner_id": "681868270430",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0730c24a0d443d56f"
          },
          "dependencies": [
            "aws_vpc.vpc-php"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:681868270430:security-group/sg-0b3a9810d80cbe089",
            "description": "acesso-http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "acesso-internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3a9810d80cbe089",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "acesso-http2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "acesso-ssh2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-http",
            "name_prefix": "",
            "owner_id": "681868270430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acesso-php"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730c24a0d443d56f"
          },
          "dependencies": [
            "aws_vpc.vpc-php"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-php1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:681868270430:subnet/subnet-04203a343bf902b22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.40.0.0/24",
            "id": "subnet-04203a343bf902b22",
            "map_public_ip_on_launch": true,
            "owner_id": "681868270430",
            "vpc_id": "vpc-0730c24a0d443d56f"
          },
          "dependencies": [
            "aws_vpc.vpc-php"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-php2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:681868270430:subnet/subnet-0ff3f4ac3bbdb9ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.41.0.0/24",
            "id": "subnet-0ff3f4ac3bbdb9ffb",
            "map_public_ip_on_launch": true,
            "owner_id": "681868270430",
            "vpc_id": "vpc-0730c24a0d443d56f"
          },
          "dependencies": [
            "aws_vpc.vpc-php",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-php",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:681868270430:vpc/vpc-0730c24a0d443d56f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.40.0.0/24",
            "default_network_acl_id": "acl-0a9767234040fe6c1",
            "default_route_table_id": "rtb-0fe35314d9fe9734d",
            "default_security_group_id": "sg-02628753e9b61e909",
            "dhcp_options_id": "dopt-f005849b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0730c24a0d443d56f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fe35314d9fe9734d",
            "owner_id": "681868270430"
          }
        }
      ]
    }
  ]
}